--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,23 @@
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    background-color: #f4f4f4;
     color: #333;
     padding: 20px;
-    padding-top: 80px; /* ヘッダーの高さに合わせて調整 */
+    padding-top: 80px;
+    background-image: 
+        url('../assets/img-prologue.png'),
+        url('../assets/hp_background.png'),
+        url('../assets/img-how-to-play1.png');
+    background-repeat: no-repeat;
+    background-position: 
+        top center,
+        center center,
+        bottom center;
+    background-size: 
+        100% auto,
+        100% auto,
+        100% auto;
+    background-attachment: scroll;
 }
 
 /* ヘッダーのデザイン */
@@ -66,6 +79,24 @@ nav ul li a:hover {
 .logo img {
     max-width: 300px;
     height: auto;
+}
+
+.prologue {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    position: relative;
+}
+
+.prologue img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 /* セクションのデザイン */
@@ -132,7 +163,7 @@ nav ul li a:hover {
     }
 }
 
-/* レスポンシブデザイン - PC版のスタイル */
+/* レスンシブデザイン - PC版のスタイル */
 @media screen and (min-width: 769px) {
     /* PC向けのスタイル調整 */
     .prologue, .how-to-play, .ending {
