--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ header {
     width: 100%;
     background-color: #333;
     color: #fff;
-    padding: 20px;
+    padding: 10px 20px; /* パディングを調整 */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,10 +30,11 @@ header {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* ヘッダー内の見出し */
-header h1 {
-    font-size: 20px;
-    margin-left: 20px;
+/* ヘッダー内の画像 */
+header img {
+    max-height: 50px; /* 画像の高さを調整 */
+    height: auto;
+    width: auto;
 }
 
 /* ナビゲーションのリスト */
