レイアウト更新

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,16 +106,20 @@ nav ul li a:hover {
 }
 
 /* ゲームの進め方 */
+#section-game-flow {
+    margin-bottom: 0.5%;
+}
+
 .game-flow {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 10%;
 }
 
 /* ゲームの進め方の画像 */
 .game-flow img {
     max-width: 70%;
     height: auto;
-    margin-bottom: 10px;
+    margin-bottom: -5%;
 }
 
 /* エンディング */
@@ -135,13 +139,16 @@ nav ul li a:hover {
 /* エンディング内のQRコードを縦並びにする */
 .ending .qr-codes {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center; /* 水平方向のセンタリング */
+    gap: 10%; /* 項目間の間隔を広げる */
 }
 
 /* QRコードの各項目 */
 .ending .qr-codes div {
     margin-bottom: 20px;
+    text-align: center; /* 各項目の内容を中央揃え */
 }
 
 /* ダウンロードセクション */
@@ -181,19 +188,38 @@ nav ul li a:hover {
     height: 100%; /* 追加: 高さを100%に設定 */
 }
 
-/* 本の表裏 */
-.book_omote, .book_ura{
-    text-align: center;
-    margin-bottom: 40px;
+/* 本の表裏を横並びにするためのコンテナ */
+.book-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px; /* セクション間のスペースを調整 */
 }
-
-/* book_omoteとbook_uraの画像 */
-.book_omote img, .book_ura img {
+.book {
+    text-align: center;
+}
+.book img {
     min-width: 50%;
-    max-width: 75%;
+    max-width: 100%; /* 幅を100%に設定 */
     height: auto;
     display: block;
     margin: 0 auto;
+}
+/* book_omoteとbook_uraの画像 */
+.book_omote img, .book_ura img {
+    min-width: 50%;
+    max-width: 100%; /* 幅を100%に設定 */
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+.book_omote_img img, .book_ura_img img {
+    min-width: 50%;
+    max-width: 70%; /* 幅を100%に設定 */
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .line-white {
@@ -298,4 +324,14 @@ footer {
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+
+/* エンディングのタイトル */
+.ending-title {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #CECEBB;
+    text-decoration: underline;
+    text-decoration-color: #CECEBB; /* 下線の色を文字色と同じに設定 */
 }
